# standard_terminal_graphics

./: APKBUILD  Cargo.toml  LICENSE  Makefile  README.md  install-alpine.sh  install.sh  stg-demo.desktop  stg.post-install  stg.pre-deinstall  test-package.sh  uninstall.sh
examples/: demo.rs
src/: animation.rs  compositor.rs  input.rs  lib.rs  renderer.rs  ui.rs
